--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     
-    <title>AR_7 - Page</title>
+    <title>AR_8 - Page</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
   
@@ -21,14 +21,127 @@
 <body id="home">
   <header id="header">
     <nav>
-    </nav>     
+      <div class="brand__name font--regular">Nakul Kumar</div>
+      <div class="nav__menu--btn">
+        <svg width="19" height="9" viewBox="0 0 19 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M1.5802 1.80518H17.9059M4.30113 7.58719H17.9059" stroke="white" stroke-width="2" stroke-linecap="round"/>
+        </svg>
+      </div>         
     </nav>
-    <div class="hero"></div>       
+    <div class="hero">
+      <div class="hero__img"></div>
+      <div class="hero__content">
+        <p class="hero__content--title hero__content--text font--light">Welcome</p>
+        <p class="hero__content--subtitle hero__content--text font--semiBold">I’m Nakul Kumar</p>
+        <p class="hero__content--desc hero__content--text font--light">CEO , UXM Creative Studio</p>
+        <button class="btn__primary btn__primary--text font--regular">Download CV</button>
+      </div>
+    </div>       
   </header>
 <main>
-  <section id=""></section>
+  <section id="menu__clients">
+    <ul class="menu__clients--list">
+      <li class="menu__clients--item font--regular">Client</li>
+      <li class="menu__clients--item font--regular">Client</li>
+      <li class="menu__clients--item font--regular">Client</li>
+      <li class="menu__clients--item font--regular">Client</li>
+    </ul>
+  </section>
+  <section id="about">
+    <div class="about__container">      
+      <div class="about__img--frame">
+        <div class="about__img"></div>
+      </div>      
+      <div class="about__content">
+        <div class="about__content--title">
+          <p class="font--semiBold">About</p>
+        </div>
+        <div class="about__content--subtitle">
+          <svg width="47" height="63" viewBox="0 0 47 63" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M23.706 0.812135L26.1539 0.0288086C28.3733 0.0288086 29.483 2.96628 29.483 8.84121L32.5184 31.4597L32.91 31.8514L44.1703 27.7389C45.6717 27.7389 46.4877 28.8813 46.6182 31.166C46.6182 32.8632 42.4731 34.9194 34.183 37.3346L33.7913 37.5305V37.9221C33.7913 39.2929 35.9454 46.4408 40.2537 59.3656V59.5615C40.2537 60.8017 39.2419 61.8462 37.2183 62.6948C35.3253 62.6948 34.085 60.4427 33.4975 55.9386C31.9962 52.6747 30.1684 47.2894 28.0143 39.7825H27.6226C19.0713 41.545 14.7957 43.0464 14.7957 44.2866C10.0957 54.4699 6.53813 59.5615 4.12288 59.5615C2.75206 59.5615 1.93609 58.6802 1.67499 56.9177C1.67499 55.3511 3.40483 52.2831 6.86451 47.7137L8.43116 44.2866H5.98327L4.12288 44.6783C1.70763 44.0908 0.5 42.8505 0.5 40.9575C1.47916 38.6728 2.91525 37.5305 4.80828 37.5305L7.25617 38.5096C10.9117 38.5096 12.7394 37.1714 12.7394 34.4951C16.0686 26.6618 19.7241 15.4342 23.706 0.812135ZM24.5872 18.6328L18.8102 36.0617C24.1629 35.0173 26.8393 34.0055 26.8393 33.0264C25.8601 23.4306 25.1094 18.6328 24.5872 18.6328Z" fill="#3F3F3F"/>
+          </svg>
+        </div>
+        <div class="about__content--desc">
+          <p class="font--regular">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sollicitudin ut augue netus fusce fringilla. Aliquam blandit enim odio cursus id. Pulvinar commodo pellentesque non massa, nunc massa nisi est id. Diam est molestie massa commodo pulvinar aliquam arcu gravida. Dictum pretium senectus dolor vulputate tempor ac vel. Placerat proin sed risus at fusce aliquam. Convallis varius auctor quam fusce diam. Vulputate enim est nibh diam pellentesque. Adipiscing dolor turpis egestas velit sit feugiat ultricies.
+          </p>
+          <p class="font--regular">
+            Id ac placerat dolor sem neque elit. Ut nisl turpis nisi etiam ac nibh.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="skills">
+    <div class="skills">
+      <hr class="brake__line"/>
+    <div class="skills__content">
+      <p class="font--semiBold">My Skills</p>
+    </div>
+    <div class="skills__list">
+      <div class="skills__item">
+        <div class="skills__item--size">
+          <svg width="97" height="83" viewBox="0 0 97 83" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M97.0024 34.1619C97.0024 42.092 95.0467 49.8997 91.3085 56.8934C87.5703 63.8871 82.1649 69.851 75.5713 74.2567C68.9776 78.6624 61.3992 81.374 53.5073 82.1513C45.6154 82.9286 37.6536 81.7476 30.3271 78.7129C23.0007 75.6782 16.5357 70.8834 11.5049 64.7534C6.4741 58.6233 3.03273 51.3472 1.48565 43.5694C-0.061438 35.7917 0.333504 27.7525 2.63549 20.1638C4.93748 12.5752 9.07545 5.67142 14.6829 0.0639887L22.2185 7.59956C17.8503 11.9678 14.6268 17.3458 12.8335 23.2574C11.0403 29.1689 10.7326 35.4315 11.9378 41.4904C13.143 47.5492 15.8238 53.2174 19.7428 57.9927C23.6618 62.768 28.698 66.5031 34.4053 68.8672C40.1127 71.2312 46.3149 72.1512 52.4627 71.5457C58.6106 70.9402 64.5142 68.8279 69.6506 65.3958C74.7871 61.9637 78.9978 57.3179 81.9099 51.8698C84.822 46.4216 86.3455 40.3394 86.3455 34.1619H97.0024Z" fill="url(#paint0_linear_2_324)"/>
+            <defs>
+              <linearGradient id="paint0_linear_2_324" x1="48.7808" y1="-14.0598" x2="48.7808" y2="82.3835" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#15B9B9"/>
+                <stop offset="1" stop-color="#3C1DFF"/>
+              </linearGradient>
+            </defs>
+          </svg>
+          <div class="skills__item--value font--semiBold">4.0</div>
+        </div>
+        <div class="skills__item--name">Adobe PhotoShop</div>
+      </div>
+      <div class="skills__item">
+        <div class="skills__item--size">
+          <svg width="97" height="97" viewBox="0 0 97 97" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M97.0041 48.3883C97.0041 59.7675 92.98 70.7801 85.6434 79.4785C78.3069 88.1768 68.1306 94.0004 56.9144 95.9194C45.6981 97.8383 34.1646 95.7289 24.3537 89.9643C14.5427 84.1997 7.08637 75.1512 3.30345 64.4192C-0.479467 53.6872 -0.345262 41.9631 3.68233 31.3206C7.70993 20.678 15.3714 11.8025 25.3118 6.264C35.2521 0.72546 46.8309 -1.11935 58.0003 1.05584C69.1696 3.23103 79.2099 9.28607 86.3455 18.1501L78.0441 24.8327C72.4855 17.9276 64.6641 13.2107 55.9632 11.5162C47.2622 9.82176 38.2423 11.2589 30.4988 15.5734C22.7552 19.8879 16.7869 26.8019 13.6494 35.0925C10.5119 43.3831 10.4073 52.5161 13.3542 60.8764C16.3011 69.2366 22.1096 76.2854 29.7524 80.7761C37.3951 85.2667 46.3798 86.9099 55.1172 85.4151C63.8547 83.9202 71.782 79.3836 77.4972 72.6076C83.2124 65.8316 86.3472 57.2527 86.3472 48.3883H97.0041Z" fill="url(#paint0_linear_2_326)"/>
+            <defs>
+              <linearGradient id="paint0_linear_2_326" x1="48.7825" y1="0.166626" x2="48.7825" y2="96.61" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#15B9B9"/>
+                <stop offset="1" stop-color="#3C1DFF"/>
+              </linearGradient>
+            </defs>
+          </svg>
+          <div class="skills__item--value font--semiBold">4.8</div>
+        </div>
+        <div class="skills__item--name">Microsoft Excel</div>
+      </div>
+      <div class="skills__item">
+        <div class="skills__item--size">
+          <svg width="62" height="83" viewBox="0 0 62 83" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M97.1409 34.3883C97.1409 42.3184 95.1851 50.1261 91.4469 57.1198C87.7087 64.1136 82.3033 70.0774 75.7097 74.4832C69.1161 78.8889 61.5376 81.6005 53.6457 82.3778C45.7538 83.1551 37.792 81.974 30.4655 78.9393C23.1391 75.9046 16.6741 71.1099 11.6433 64.9798C6.61252 58.8498 3.17116 51.5736 1.62408 43.7959C0.0769898 36.0182 0.471932 27.9789 2.77392 20.3903C5.0759 12.8017 9.21388 5.89786 14.8213 0.290429L22.3569 7.826C17.9887 12.1942 14.7652 17.5723 12.9719 23.4838C11.1787 29.3954 10.871 35.658 12.0762 41.7168C13.2814 47.7757 15.9622 53.4438 19.8812 58.2191C23.8002 62.9945 28.8364 66.7296 34.5438 69.0936C40.2511 71.4577 46.4534 72.3777 52.6012 71.7722C58.749 71.1667 64.6526 69.0543 69.789 65.6223C74.9255 62.1902 79.1363 57.5443 82.0483 52.0962C84.9604 46.6481 86.4839 40.5659 86.4839 34.3883H97.1409Z" fill="url(#paint0_linear_2_325)"/>
+            <defs>
+              <linearGradient id="paint0_linear_2_325" x1="48.9192" y1="-13.8334" x2="48.9192" y2="82.61" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#15B9B9"/>
+                <stop offset="1" stop-color="#3C1DFF"/>
+              </linearGradient>
+            </defs>
+          </svg>
+          <div class="skills__item--value font--semiBold">4.0</div>
+        </div>
+        <div class="skills__item--name">Adobe PhotoShop</div>
+      </div>
+    </div>  
+    </div>
+  </section>
+  <section id="experiance">
+    <div class="experiance__container">
+
+    </div>
+  </section>
 </main>
-<footer id="footer" class="footer"></footer>
+<footer id="footer">
+  <div class="footer__container">
+    <div class="footer__header">
+      <p class="footer__header--title font--semiBold">Intrested in my Work</p>
+      <p class="footer__header--subtitle font--regular">Download my cV to know more about me</p>
+    </div>
+    <button class="btn__secondary btn__secondary--text font--regular">Download CV</button>
+  </div>
+</footer>
 <script src="assets/vendor/aos/aos.js"></script>
 <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/main.js"></script>
