Added new contents.

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     </div>
   </section>
   <section id="skills">
-    <div class="skills">
-      <hr class="brake__line"/>
+    <div class="skills"> 
+      <div class="brake__line--first"><hr class="brake__line"/></div>      
     <div class="skills__content">
       <p class="font--semiBold">My Skills</p>
     </div>
@@ -124,12 +124,71 @@
         </div>
         <div class="skills__item--name">Adobe PhotoShop</div>
       </div>
-    </div>  
+    </div>
+    <div class="skills__lang">
+      <div class="skills__lang--header">
+        <p class="font--semiBold">language</p>
+        <div class="brake__line--second">
+          <hr class="brake__line" />
+        </div>
+      </div>
+      <div class="skills__lang--en">
+        <div class="skills__lang--name font--semiBold">English</div>
+        <div class="skills__lang--value value__lang--en">
+          <div class="skills__lang--rate font--semiBold">Fluent</div>
+        </div>
+      </div>
+      <div class="skills__lang--fr">
+        <div class="skills__lang--name font--semiBold">French</div>
+        <div class="skills__lang--value value__lang--fr">
+          <div class="skills__lang--rate font--semiBold">Good</div>
+        </div>
+      </div>
+    </div> 
+    <div class="skills__studies">
+      <div class="skills__studies--header">
+        <p class="font--semiBold">Studies</p>
+      </div>
+      <div class="brake__line--third">
+        <hr class="brake__line"/>
+      </div>
+      
+      <div class="studies__item">
+        <div class="studies__item--logo"></div>
+        <div class="studies__item--details">
+          <div class="studies__item--name font--semiBold">Christ University</div>
+          <div class="studies__item--data">
+            <span class="font--light">BBA</span>
+            <span class="font--light">2019</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="studies__item">
+        <div class="studies__item--logo"></div>
+        <div class="studies__item--details">
+          <div class="studies__item--name font--semiBold">Christ University</div>
+          <div class="studies__item--data">
+            <span class="font--light">PUC</span>
+            <span class="font--light">2016</span>
+          </div>
+        </div>
+      </div>
+
+    </div> 
     </div>
   </section>
   <section id="experiance">
     <div class="experiance__container">
-
+      <div class="experiance__header">
+        <p class="font--semiBold">My Work Experiance</p>
+      </div>
+      <div class="experiance__gallery">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
     </div>
   </section>
 </main>
