Added @media for the remaining sections

--- a/index.html
+++ b/index.html
@@ -55,10 +55,13 @@
     </ul>
   </section>
   <section id="about">
-    <div class="about__container">      
-      <div class="about__img--frame">
-        <div class="about__img"></div>
-      </div>      
+    <div class="about__container"> 
+      <div class="about__img--content">
+        <div class="about__img--frame">
+          <div class="about__img"></div>
+        </div>      
+      </div>     
+      
       <div class="about__content">
         <div class="about__content--title">
           <p class="font--semiBold">About</p>
